<resources>
    <string name="app_name">draftt</string>
    <string name="onboarding_slide1_text">Join the leagues</string>
    <string name="onboarding_slide1_graphic_description">Cricket Stadium Graphic</string>
    <string name="onboarding_slide2_text">Create your team</string>
    <string name="onboarding_slide2_graphic_description">Crossed Cricket Bats</string>
    <string name="onboarding_slide3_graphic_description">App logo</string>
    <string name="onboaring_slide3_button_text">Let\'s draftt!</string>
    <string name="draftt_logo_graphic_description">draftt logo</string>
    <string name="login_label_text">Login</string>
    <string name="login_sublabel_text">Let\'s draftt</string>
    <string name="login_graphic_description">Cricket Stadium graphic</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_signup_text">Don’t have an account, champ? Sign Up!</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="forget_password_title">Let\'s get you a new one</string>
    <string name="forget_password_subtitle">Enter the email address you used to sign up</string>
    <string name="forget_password_button_text">Reset password</string>
    <string name="wickets_graphic">Wickets Graphic</string>
    <string name="signup_login_text">Already have an account? Log in!</string>
    <string name="login_text">Log in!</string>
    <string name="sign_up_title">Sign up!</string>
    <string name="signup_title_sublabel">Get started!</string>
    <string name="signup_title_graphic_description">cricket helmet</string>
    <string name="signup_name">Name</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="signup_signup_buttom_text">Sign up</string>
    <string name="account_verification_title">Verify email address</string>
    <string name="account_verification_subtitle">Please enter the 6-digit code sent to your email address</string>
    <string name="enter_code_hint">Enter code</string>
    <string name="account_verification_button_text">Verify</string>
    <string name="account_verification_graphic_desc">Pitch graphic</string>
    <string name="team_name_title">Team name</string>
    <string name="team_name_subtitle">Time to decide what truly matters</string>
    <string name="team_name_edittext_text">Enter team name</string>
    <string name="team_name_button">Let\'s go!</string>
    <string name="SHARED_PREF_USER_EMAIL_KEY">USER_EMAIL</string>
    <string name="SHARED_PREF_FILE_KEY">com.aa.draftt.PREFERENCE_FILE_KEY</string>
    <string name="SHARED_PREF_USER_NAME_KEY">USER_NAME</string>
    <string name="SHARED_PREF_USER_ID_KEY">USER_Id</string>
    <string name="signup_name_validation_error_empty">Name can\'t be empty</string>
    <string name="signup_email_validation_error_empty">Email can\'t be empty</string>
    <string name="signup_email_validation_error_invalid">Entered email isn\'t a valid email address</string>
    <string name="signup_password_validation_error_empty">Password can\'t be empty</string>
    <string name="signup_password_validation_error_length">Password can\'t be less than 8 characters</string>
    <string name="signup_confirmpassword_validation_error_empty">Please re-enter your password</string>
    <string name="signup_confirmpassword_validation_error_mismatch">Passwords do not match!</string>
    <string name="login_email_validation_error_empty">Please enter an email address</string>
    <string name="login_email_validation_error_invalid">Please enter a valid email address</string>
    <string name="login_password_validation_error_empty">Please enter your password</string>
</resources>